--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "electron-is-dev": "^1.1.0",
     "glob": "^7.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -70,5 +71,9 @@
     "win": {
       "target": "nsis"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maschino/react-i18n-editor.git"
   }
 }
