--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint \"src/**\""
   },
   "dependencies": {
+    "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.1.0",
     "glob": "^7.1.3",
     "react": "^16.8.6",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/glob": "^7.1.1",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
