--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
-language: node_js
-node_js:
-  - "10"
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode10.2
+      language: node_js
+      node_js: "10"
+      env:
+        - ELECTRON_CACHE=$HOME/.cache/electron
+        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+
+    - os: linux
+      services: docker
+      language: generic
+
 cache:
+  directories:
+    - node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
   yarn: true
+
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
 
 jobs:
   include:
@@ -16,6 +34,18 @@ jobs:
     - script: "yarn build:render"
       name: "Build renderer"
       if: branch != master
-    - script: "yarn electron:dist --win --linux"
-      name: "Buid release"
+    - script:
+      - |
+        if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+          docker run --rm \
+            --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+            -v ${PWD}:/project \
+            -v ~/.cache/electron:/root/.cache/electron \
+            -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+            electronuserland/builder:wine \
+            /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn electron:dist --linux --win"
+        else
+          yarn electron:dist
+        fi
+      name: "Build release"
       if: branch = master
