--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-os: osx
-osx_image: xcode10.2
 language: node_js
 node_js: "10"
+services: docker
+
 env:
-  - ELECTRON_CACHE=$HOME/.cache/electron
-  - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+  global:
+    - ELECTRON_CACHE=$HOME/.cache/electron
+    - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
 cache:
   directories:
@@ -28,6 +29,14 @@ jobs:
     - script: "yarn build:render"
       name: "Build renderer"
       if: branch != master
-    - script: "yarn electron:dist --win"
+    - script:
+      - |
+        docker run --rm \
+        --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+        -v ${PWD}:/project \
+        -v ~/.cache/electron:/root/.cache/electron \
+        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+        electronuserland/builder:wine \
+        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
       name: "Build release"
       if: branch = master
