--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,6 @@ jobs:
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
+        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn electron:dist --linux --win"
       name: "Build release"
       if: branch = master
