--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-node_js: "10"
+node_js: '10'
 services: docker
 
 env:
@@ -20,24 +20,24 @@ before_cache:
 jobs:
   include:
     - stage: Test
-      script: "yarn lint"
-      name: "Linting"
+      script: 'npm run lint'
+      name: 'Linting'
     - stage: Build
-      script: "yarn build:main"
-      name: "Build main process"
+      script: 'npm run build:main'
+      name: 'Build main process'
       if: branch != master
-    - script: "yarn build:render"
-      name: "Build renderer"
+    - script: 'npm run build:render'
+      name: 'Build renderer'
       if: branch != master
-    - stage: "Deploy"
+    - stage: 'Deploy'
       script:
-      - |
-        docker run --rm \
-        --env-file <(env | grep -vE '\r|\n' | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
-        -v ${PWD}:/project \
-        -v ~/.cache/electron:/root/.cache/electron \
-        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-        electronuserland/builder:wine \
-        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn electron:dist --linux --win --publish onTagOrDraft"
-      name: "Build release"
+        - |
+          docker run --rm \
+          --env-file <(env | grep -vE '\r|\n' | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+          -v ${PWD}:/project \
+          -v ~/.cache/electron:/root/.cache/electron \
+          -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+          electronuserland/builder:wine \
+          /bin/bash -c "npm install && npm run electron:dist --linux --win --publish onTagOrDraft"
+      name: 'Build release'
       if: branch = master
