--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "lint": "eslint \"src/**\""
   },
   "dependencies": {
-    "electron-devtools-installer": "^2.2.4",
-    "electron-is-dev": "^1.1.0",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.1.2",
     "glob": "^7.1.4",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "react-kawaii": "^0.14.4",
+    "prettier": "^2.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-kawaii": "^0.17.0",
     "react-ocean-forms": "^3.0.0-beta.2"
   },
   "devDependencies": {
@@ -33,21 +34,17 @@
     "@material-ui/icons": "^4.4.3",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/glob": "^7.1.1",
-    "@types/react": "^16.9.4",
-    "@types/react-dom": "^16.9.1",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
     "@types/react-kawaii": "^0.11.0",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
-    "concurrently": "^4.1.2",
-    "electron": "^6.0.11",
-    "electron-builder": "^21.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-oceanjs": "^1.1.0",
-    "eslint-plugin-react": "^7.15.1",
-    "eslint-plugin-react-hooks": "^2.1.1",
-    "react-scripts": "^3.1.2",
-    "typescript": "^3.6.3",
-    "wait-on": "^3.3.0"
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "concurrently": "^6.1.0",
+    "electron": "^12.0.8",
+    "electron-builder": "^22.10.5",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.4",
+    "wait-on": "^5.3.0"
   },
   "browserslist": {
     "production": [
@@ -55,6 +52,12 @@
     ],
     "development": [
       "last 1 chrome version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
   "build": {
