--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,6 @@ jobs:
           -v ~/.cache/electron:/root/.cache/electron \
           -v ~/.cache/electron-builder:/root/.cache/electron-builder \
           electronuserland/builder:wine \
-          /bin/bash -c "npm install && npm run electron:dist --linux --win --publish onTagOrDraft"
+          /bin/bash -c "npm install && npm run electron:dist"
       name: 'Build release'
       if: branch = master
